--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.13.0",
-    "nodemon": "^2.0.9"
+    "mongodb": "^3.6.9",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.9",
+    "react-router-dom": "^5.2.0",
+    "redis": "^3.1.2",
+    "socket.io": "^4.1.2",
+    "uuid": "^8.3.2"
   }
 }
